--- a/dungeon-friend/package.json
+++ b/dungeon-friend/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^2.4.0",
     "three": "^0.95.0"
   },
   "scripts": {
