--- a/dungeon-friend/package.json
+++ b/dungeon-friend/package.json
@@ -10,7 +10,7 @@
     "three": "^0.95.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
